--- a/manifest.json
+++ b/manifest.json
@@ -9,17 +9,17 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "icon-192.png",
+      "src": "1.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512.png",
+      "src": "1.png",
       "sizes": "512x512",
       "type": "image/png"
     },
     {
-      "src": "icon-maskable-512.png",
+      "src": "1.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
